create bills
