# backend/server.mjs
@@ -4,6 +4,7 @@ import fs from "fs";
 import cors from "cors";
 import userRoutes from "./routes/user.routes.mjs";
 import inventoryRoutes from "./routes/inventory.routes.mjs";
+import salesRoutes from "./routes/sales.routes.mjs";
 import swaggerUI from "swagger-ui-express";
 import * as userController from "./controllers/users.controller.mjs";
 
@@ -15,10 +16,6 @@ let swaggerDocumentation;
 
 app.use(cors());
 app.use(express.json());
-
-// const swaggerFileContent = fs.readFileSync(swaggerFilePath, 'utf8');
-// swaggerDocumentation = JSON.parse(swaggerFileContent);
-// app.use("/api-docs", swaggerUI.serve, swaggerUI.setup(swaggerDocumentation));
 
 try {
   const swaggerFileContent = fs.readFileSync(swaggerFilePath, 'utf8');
@@ -37,6 +34,7 @@ app.post("/api/auth/login", userController.loginUser);
 
 app.use("/api/users", userRoutes);
 app.use("/api/inventory", inventoryRoutes);
+app.use("/api/sales", salesRoutes);
 
 app.listen(port, () => {
   console.log(`Servidor escuchando en http://localhost:${port}`);
